syntax = "proto3";

package prost;

import "google/protobuf/descriptor.proto";

message ProstPackage {
  string path = 1;
}

extend google.protobuf.FileOptions {
  ProstPackage package = 2001;
}

message ProstMessage {
  string type_name = 1;
  repeated string attrs = 2;
  string external = 3;
  bool gen_borrowed = 4;
}

extend google.protobuf.MessageOptions {
  ProstMessage type = 2001;
}

message ProstField {
  string field_name = 1;
  string type = 2;
  string borrowed_type = 3;
}

extend google.protobuf.FieldOptions {
  ProstField field = 2001;
}
